# api-automation-pytest

./: README.md  pyproject.toml  requirements.txt
core/: config.py  schema.py
test_assets/: api_responses.json  test_payloads.json
tests/: conftest.py  test_api.py
